Firts test commit

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <h2>University of Texas at Dallas.</h2>
         </div>
       </div>
-
+<!-- 
       <nav>
         <div id="menu_container">
           <ul class="sf-menu" id="nav">
@@ -54,7 +54,7 @@
             <li><a href="contact.html">Contact Me</a></li>
           </ul>
         </div>
-      </nav>
+      </nav> -->
     </header>
     <div id="site_content">
       <div id="sidebar_container">
