Firts test commit

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
           <!-- Place this tag in your head or just before your close body tag. -->
           <script async defer src="https://buttons.github.io/buttons.js"></script>
         </div>
-        <div class="sidebar">
+        <!-- <div class="sidebar">
           <h3 style="text-align: center;">Ongoing Research</h3>
           <h4>Pure Mathematics</h4>
           <div style="padding-top: 10px;">
@@ -108,8 +108,8 @@
           <div style="padding-top: 10px; padding-bottom: 10px;"><a href="computationaltopology.html">Computational
               Topology</a></div>
           </p>
-        </div>
-        <div class="sidebar">
+        </div> -->
+        <!-- <div class="sidebar">
           <h3>Latest News</h3>
           <h4>Events of the year 2020</h4>
           <p></p>
@@ -121,7 +121,7 @@
           <h5>May</h5>
           <p>Obtained Graduate Degree Certification in Data Science. <a href="gsdatascience.html">Read
               more...</a></p>
-        </div>
+        </div> -->
 
       </div>
       <div class="content">
