Firts test commit

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
       <div id="logo">
         <div id="logo_text">
           <!-- class="logo_colour", allows you to change the colour of the text -->
-          <h1><a href="index.html">Md Arafat Hossain Khan</a></h1>
-          <h2> PhD in Mathematics</h2>
-          <h2>Department of Mathematical Sciences</h2>
-          <h2>University of Texas at Dallas.</h2>
+          <h1><a href="https://mdarafathkhan.github.io/Introducing-Myself-and-My-Works/" style="padding-top: 20px; padding-right: 20px; padding-bottom: 20px; padding-left: 20px">Md Arafat Hossain Khan</a></h1>
+          <h2  style="padding-top: 20px; padding-right: 20px; padding-bottom: 20px; padding-left: 20px">Pure mathematician</h2>
+          <!-- <h2>Department of Mathematical Sciences</h2>
+          <h2>University of Texas at Dallas.</h2> -->
         </div>
       </div>
 <!-- 
@@ -81,9 +81,7 @@
           <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
           <div class="LI-profile-badge" data-version="v1" data-size="medium" data-locale="en_US" data-type="horizontal"
             data-theme="light" data-vanity="mdarafathossainkhan" style="padding-left:0%;">
-            <a class="LI-simple-link" href='https://www.linkedin.com/in/mdarafathossainkhan?trk=profile-badge'>Md Arafat
-              Hossain
-              Khan</a>
+            <a class="LI-simple-link" href='https://www.linkedin.com/in/mdarafathossainkhan?trk=profile-badge'>Md Arafat Hossain Khan</a>
           </div>
 
         </div>
